<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@android:color/white"
    android:gravity="center"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <com.oryn.lotus.flutter_ring_kit.widgets.RippleRelativeLayout
        android:id="@+id/rl_ripple_main"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/txt_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txt_title"
            android:layout_centerHorizontal="true"
            android:text="@string/calling_screen_logo"
            android:textColor="@color/dark_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/img_avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/calling_screen_title"
            android:textColor="@color/dark_text"
            android:textSize="20sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_avatar"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerInParent="true"
            android:background="@android:color/white"
            android:padding="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/female"
            android:theme="@style/MaterialTheme"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:strokeColor="@color/caller_img_stroke"
            app:strokeWidth="4dp" />

        <TextView
            android:id="@+id/txt_caller_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/calling_screen_doctor_name"
            android:textAlignment="center"
            android:textColor="@color/dark_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_caller_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/calling_screen_description"
            android:textAlignment="center"
            android:textColor="@color/dark_text"
            android:textSize="13sp" />
    </com.oryn.lotus.flutter_ring_kit.widgets.RippleRelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">

        <com.oryn.lotus.flutter_ring_kit.widgets.RippleRelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:ripple_amount="4"
            app:ripple_radius="15dp"
            app:ripple_scale="4.5">

            <ImageView
                android:id="@+id/img_end_call"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_call_reject"
                android:contentDescription="@string/img_call_reject"
                android:onClick="onRejectCall"
                android:padding="16dp"
                android:src="@drawable/ic_call_reject" />
        </com.oryn.lotus.flutter_ring_kit.widgets.RippleRelativeLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.oryn.lotus.flutter_ring_kit.widgets.RippleRelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:ripple_amount="4"
            app:ripple_radius="15dp"
            app:ripple_scale="4.5">

            <ImageView
                android:id="@+id/img_start_call"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="50dp"
                android:background="@drawable/bg_call_accept"
                android:contentDescription="@string/img_call_accept"
                android:onClick="onAcceptCall"
                android:padding="16dp"
                android:src="@drawable/ic_call_accept" />
        </com.oryn.lotus.flutter_ring_kit.widgets.RippleRelativeLayout>
    </LinearLayout>
</LinearLayout>
